--- a/index.html
+++ b/index.html
@@ -220,40 +220,64 @@
         }),
       }).then ((response) => {
           response.json().then ((responseData) => {
-            comments = responseData.comments;
-          })
-      
-      renderComents();
-
-      const fetchPromise = () => {
-      return fetch ('https://webdev-hw-api.vercel.app/api/v1/ruslankrivilin/comments',
-      {
-        method: "GET"
-      })
-      .then ((response) => {
-        const jsonPromise = response.json();
-      jsonPromise.then ((responseData) => {
+            fetch ('https://webdev-hw-api.vercel.app/api/v1/ruslankrivilin/comments',{
+              method: "GET"
+            }).then ((response) => {
+            const jsonPromise = response.json();
+            jsonPromise.then ((responseData) => {
             const appComments = responseData.comments.map((comment) => {
             const dateComment = new Date(comment.date);
             return {
-              name: comment.author.name,
-              date: dateComment.getDate().toString().padStart(2, '0') + '.' + 
+                name: comment.author.name,
+                date: dateComment.getDate().toString().padStart(2, '0') + '.' + 
                 (dateComment.getMonth() + 1).toString().padStart(2, '0') + '.' +
                 dateComment.getFullYear().toString().slice(-2) + ' ' +
                 dateComment.getHours().toString().padStart(2, '0') + ':' +
                 dateComment.getMinutes().toString().padStart(2, '0'),
-            text: comment.text,
-            like: comment.likes,
-            isActiveLikes: false,
-            }
+                text: comment.text,
+                like: comment.likes,
+                isActiveLikes: false,
+                }
           })
           comments = appComments;
           renderComents();
+          })
       })
-  });
-}
-      })
-      renderComents();
+    })
+  })
+    renderComents();
+    
+//       renderComents();
+
+//       const fetchPromise = () => {
+//       return fetch ('https://webdev-hw-api.vercel.app/api/v1/ruslankrivilin/comments',
+//       {
+//         method: "GET"
+//       })
+//       .then ((response) => {
+//         const jsonPromise = response.json();
+//       jsonPromise.then ((responseData) => {
+//             const appComments = responseData.comments.map((comment) => {
+//             const dateComment = new Date(comment.date);
+//             return {
+//               name: comment.author.name,
+//               date: dateComment.getDate().toString().padStart(2, '0') + '.' + 
+//                 (dateComment.getMonth() + 1).toString().padStart(2, '0') + '.' +
+//                 dateComment.getFullYear().toString().slice(-2) + ' ' +
+//                 dateComment.getHours().toString().padStart(2, '0') + ':' +
+//                 dateComment.getMinutes().toString().padStart(2, '0'),
+//             text: comment.text,
+//             like: comment.likes,
+//             isActiveLikes: false,
+//             }
+//           })
+//           comments = responseData.comments;
+//           renderComents();
+//       })
+//   });
+// }
+      // })
+      // renderComents();
 
       textInputElement.value = "";
       textareaInputElement.value = "";
