--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@
           else {
             alert ("Кажется пошло что - то не так, попробуйте позже");
             throw new Error ("У пользователя пропал интернет");
-
           }
           
         })
@@ -285,9 +284,9 @@
         buttonWritter.textContent = "Написать";
         
         // if(error.status === 400) {
-        //     alert ("Поле должно содержать хотя бы 3 символа");
+        //     alert ("Поле должно содержать хотя бы 3 символа")
         //   } else {
-        //     alert ("Кажется пошло что - то не так, попробуйте позже");
+        //     alert ("Кажется пошло что - то не так, попробуйте позже")
         //   }
         console.log(error);
 
