--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
     <ul id="list" class="comments"> 
 
-    </ul>
-      <div class="add-form">
+    </ul> -->
+    <!-- <div>Чтобы добавить комментарий, <a href="">авторизуйтесь</a></div> -->
+      <!-- <div class="add-form">
         <input
           type="text"
           class="add-form-name"
@@ -31,7 +32,8 @@
           <button class="add-form-button" id="writter">Написать</button>
         </div>
       </div>
-    </div>
+    </div> -->
+    <div class="container" id="app"></div>
   </body>
 
   <script type="module" src="./main.js"></script>
